--- a/versions.gradle
+++ b/versions.gradle
@@ -9,6 +9,7 @@ versions.android_gradle_plugin = "3.4.1"
 
 versions.support = "28.0.0"
 versions.constraint_layout = "1.1.3"
+versions.gson = "2.8.2"
 versions.junit = "4.12"
 versions.runner = "1.0.2"
 versions.espresso_core = "3.0.2"
@@ -28,13 +29,14 @@ deps.support = support
 
 //view
 deps.constraint_layout = "com.android.support.constraint:constraint-layout:$versions.constraint_layout"
-
 deps.android_gradle_plugin = "com.android.tools.build:gradle:$versions.android_gradle_plugin"
 
 //other
 
 deps.arouter_api = "com.alibaba:arouter-api:$versions.arouter_api"
 deps.arouter_compiler = "com.alibaba:arouter-compiler:$versions.arouter_compiler"
+
+deps.gson = "com.google.code.gson:gson:$versions.gson"
 
 deps.junit = "junit:junit:$versions.junit"
 deps.runner = "com.android.support.test:runner:$versions.runner"
