--- a/lib_common/build.gradle
+++ b/lib_common/build.gradle
@@ -15,7 +15,7 @@ android {
         //Arouter路由配置
         javaCompileOptions {
             annotationProcessorOptions {
-                arguments = [moduleName: project.getName()]
+                arguments = [AROUTER_MODULE_NAME: project.getName(), AROUTER_GENERATE_DOC: "enable"]
             }
         }
 
@@ -43,4 +43,5 @@ dependencies {
 
     //router
     api deps.arouter_api
+    annotationProcessor deps.arouter_compiler
 }
